2004-10-05  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/loudmouth-sections.txt:
	- Added missing function

2004-09-24  Tim Robbins  <tim@teragen.com.au>

	* loudmouth/lm-connection.c: (connection_do_close):
        - Use g_source_destroy instead of g_source_remove since we might not
          use the default main context.

2004-09-20  Tollef Fog Heen  <tfheen@raw.no>

	* loudmouth/lm-connection.c:
	  (connection_in_event): Use gsize and not gint, they have
          different sizes on 64 bit architectures.

	* loudmouth/lm-ssl.c, loudmouth/lm-internals.h:
          Adjust prototype of _lm_ssl_read to match.

2004-09-03  Mikael Hallendal  <micke@imendio.com>

	* examples/Makefile.am:
	* examples/lm-register.c:
	- Added small tool to register an account

2004-09-02  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_set_proxy):
	- Use NULL to unset the proxy settings
	* docs/reference/tmp/lm-proxy.sgml: Updated LmProxyType docs

2004-08-30  Mikael Hallendal  <micke@imendio.com>

	* Released 0.17.1
	
	* NEWS: Updated for 0.17.1
	* configure.in: Bumped version to 0.17.1
	* loudmouth/lm-connection.c: 
	(connection_start_keep_alive):
	- Don't add idle if keep alive rate is 0.
	- Patch from Marcin Krzyżanowski <krzak@hakore.com>
	(lm_connection_new): initialize keep alive rate

2004-08-27  Mikael Hallendal  <micke@imendio.com>

	* Released 0.17
	
	* NEWS: Updated for 0.17
	* configure.in: Don't try to output mono Makefiles
	* docs/reference/tmpl/lm-connection.sgml: Updated
	* loudmouth/lm-connection.[ch]:
	- Changed the LmConnectionState enum to follow the rest of the API 
	  better.

2004-08-25  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.[ch]: 
	(connection_send_keep_alive),
	(connection_start_keep_alive), 
	(connection_stop_keep_alive): Added
	(lm_connection_set_keep_alive_rate): 
	- Added support to have Loudmouth send keep alive packages, a single 
	  space, at regular intervals.
